# AudioManager

./: .claudeignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  index.html  package.json  phone.html  pnpm-lock.yaml  run-audio-manager-test.bat  vite.phone.config.ts
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release-candidate.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HANDOFF.md  INSTALL.md  PLAN-mini-controller.md  PLAN-record-mixer-nodes.md  ROADMAP.md  SETUP.md  SIGNING.md  STREAMING_SETUP.md  TROUBLESHOOTING.md  UI-POLISH-STATUS.md  dsp-roadmap-handoff.md  fx-node-wiring-plan.md  github-settings.md  noise-suppression-spike.md  phone-wireless-audio-source.md  process-loopback-cross-platform.md  process-loopback-implementation-plan.md  release-readiness-audit.md  streaming-dsp-implementation-plan.md
docs/phone/: architecture.md  capacitor-notes.md  decisions.md  latency.md  network-guide.md  pairing-v2-spec.md  protocol-v1.md  user-guide.md
scripts/: win-dev-shell.ps1
src/: App.css  App.tsx  PreviewAudioManager.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: amvc.rs  amvc_sync.rs  app_settings.rs  lib.rs  main.rs  presets.rs  state.rs
src-tauri/src/audio/: bus.rs  device_watch.rs  devices.rs  endpoint_ctl.rs  graph.rs  loopback.rs  metering_tap.rs  meters.rs  mixer.rs  mod.rs  monitor.rs  passthrough.rs  recorder.rs  remote.rs  resampler.rs  routing.rs  session.rs  source.rs  spectrum.rs
src-tauri/src/audio/dsp/: automix.rs  binaural.rs  config.rs  denoise.rs  dynamics.rs  filter.rs  gate.rs  live.rs  mod.rs
src-tauri/src/net/: jitter.rs  mod.rs  paired.rs  server.rs  session.rs  signaling.rs  tls.rs  webrtc_peer.rs
src/components/audio-manager/: AmvcBanner.module.css  AmvcBanner.tsx  AudioManager.module.css  AudioManager.tsx  AutomixPanel.module.css  AutomixPanel.tsx  BusCard.module.css  BusCard.tsx  BusContextMenu.module.css  BusContextMenu.tsx  BusDetail.module.css  BusDetail.test.tsx  BusDetail.tsx  BusDeviceDropdown.module.css  BusDeviceDropdown.tsx  BusRail.module.css  BusRail.tsx  CableNotice.module.css  CableNotice.test.tsx  CableNotice.tsx  CablePanel.module.css  CablePanel.test.tsx  CablePanel.tsx  ConsoleView.module.css  ConsoleView.tsx  DetailPanel.module.css  DetailPanel.tsx  DevicePicker.module.css  DevicePicker.test.tsx  DevicePicker.tsx  DspControls.module.css  DspControls.test.tsx  DspControls.tsx  EqGraph.module.css  EqGraph.test.tsx  EqGraph.tsx  EqPopout.css  EqPopout.tsx  FlowView.module.css  FlowView.tsx  (+83 more)
src/ipc/: commands.ts  events.test.ts  events.ts
src/phone/: main-phone.ts
src/phone/core/: capture.test.ts  capture.ts  machine.test.ts  machine.ts  protocol.test.ts  protocol.ts  signaling.ts  transport.test.ts  transport.ts
src/types/: engine.ts
src/utils/: amvc.test.ts  amvc.ts  amvcPresets.test.ts  amvcPresets.ts  devices.test.ts  devices.ts
