[package]
name = "audio-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
ringbuf = "0.2"
hound = "3.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Phone Wireless Audio (#39-#45): LAN HTTPS server hosting the phone client
# and the pairing/signaling WebSocket. See docs/phone/architecture.md.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.14"
rust-embed = "8"
local-ip-address = "0.6"
futures-util = "0.3"

# Phase 2 (#41/#42): receive the phone's WebRTC Opus track and decode it.
# webrtc-rs is pure Rust on `ring` (no cmake/NASM/openssl on MSVC). audiopus
# 0.3.0-rc.0 ships a prebuilt static libopus for MSVC; if it fails to link on
# this toolchain the spike falls back to `opus` (builds libopus via cmake).
webrtc = "0.17"
audiopus = "=0.3.0-rc.0"
# webrtc pulls rustls's aws-lc-rs backend while axum-server pulls ring; with
# both compiled in, rustls cannot auto-pick a provider. Depend on rustls
# directly with `ring` so net/mod.rs can install it as the process default.
rustls = { version = "0.23", features = ["ring"] }

# WASAPI loopback capture (system + per-process). Windows-only; pulls in the
# `windows` crate transitively. Process loopback needs Win10 2004 (build 19041).
[target.'cfg(windows)'.dependencies]
wasapi = "0.23"
# Resolve session PIDs to process image names for the app picker (#16).
sysinfo = "0.39"

# audiopus_sys builds libopus via cmake; at opt-level 0 cmake-rs picks the DEBUG
# MSVC runtime (MSVCRTD), which Rust does not link, giving `_CrtDbgReportW`
# unresolved-symbol link errors. Forcing opt-level >= 1 makes cmake build with
# the release runtime (RelWithDebInfo) so the CRT matches — and decodes faster.
[profile.dev.package.audiopus_sys]
opt-level = 2

